--- a/index.html
+++ b/index.html
@@ -34,6 +34,9 @@
         <p>
           <a href="https://gist.github.com/ilake"> Gist</a>
         </p>
+        <p>
+          <script src="https://gist.github.com/ilake/d63248c8026bc38dad57.js"></script>
+        </p>
       </section>
     </div>
 
